--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ charset-normalizer==3.4.0
 click==8.1.7
 contourpy==1.3.1
 cycler==0.12.1
+dataclasses-json==0.6.7
 exceptiongroup==1.2.2
 filelock==3.16.1
 fonttools==4.55.0
@@ -23,6 +24,7 @@ GitPython==3.1.43
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.27.2
+httpx-sse==0.4.0
 huggingface-hub==0.26.2
 idna==3.10
 Jinja2==3.1.4
@@ -33,16 +35,19 @@ jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
 kiwisolver==1.4.7
 langchain==0.3.8
+langchain-community==0.3.8
 langchain-core==0.3.21
 langchain-text-splitters==0.3.2
 langsmith==0.1.145
 lxml==5.3.0
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+marshmallow==3.23.1
 matplotlib==3.9.2
 mdurl==0.1.2
 mpmath==1.3.0
 multidict==6.1.0
+mypy-extensions==1.0.0
 narwhals==1.14.2
 networkx==3.4.2
 numpy==1.26.4
@@ -54,11 +59,13 @@ propcache==0.2.0
 protobuf==5.28.3
 pyarrow==18.0.0
 pydantic==2.10.1
+pydantic-settings==2.6.1
 pydantic_core==2.27.1
 pydeck==0.9.1
 Pygments==2.18.0
 pyparsing==3.2.0
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 python-pptx==1.0.2
 pytz==2024.2
 PyYAML==6.0.2
@@ -75,7 +82,7 @@ sentence-transformers==3.3.1
 six==1.16.0
 smmap==5.0.1
 sniffio==1.3.1
-SQLAlchemy==2.0.36
+SQLAlchemy==2.0.35
 streamlit==1.40.1
 sympy==1.13.1
 tenacity==9.0.0
@@ -86,6 +93,7 @@ torch==2.5.1
 tornado==6.4.2
 tqdm==4.67.1
 transformers==4.46.3
+typing-inspect==0.9.0
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
