--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ cachetools==5.5.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
 click==8.1.7
+colorama
 contourpy==1.3.1
 cycler==0.12.1
 dataclasses-json==0.6.7
@@ -64,6 +65,7 @@ pydantic_core==2.27.1
 pydeck==0.9.1
 Pygments==2.18.0
 pyparsing==3.2.0
+pypdf
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-pptx==1.0.2
