--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+accelerate==1.1.1
 aiohappyeyeballs==2.4.3
 aiohttp==3.11.7
 aiosignal==1.3.1
@@ -6,16 +7,17 @@ annotated-types==0.7.0
 anyio==4.6.2.post1
 async-timeout==4.0.3
 attrs==24.2.0
+bitsandbytes==0.42.0
 blinker==1.9.0
 cachetools==5.5.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
 click==8.1.7
-colorama
 contourpy==1.3.1
 cycler==0.12.1
 dataclasses-json==0.6.7
 exceptiongroup==1.2.2
+faiss-cpu==1.9.0.post1
 filelock==3.16.1
 fonttools==4.55.0
 frozenlist==1.5.0
@@ -58,6 +60,7 @@ pandas==2.2.3
 pillow==11.0.0
 propcache==0.2.0
 protobuf==5.28.3
+psutil==6.1.0
 pyarrow==18.0.0
 pydantic==2.10.1
 pydantic-settings==2.6.1
@@ -65,7 +68,7 @@ pydantic_core==2.27.1
 pydeck==0.9.1
 Pygments==2.18.0
 pyparsing==3.2.0
-pypdf
+pypdf==5.1.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-pptx==1.0.2
