--- a/requirements.txt
+++ b/requirements.txt
@@ -36,6 +36,7 @@ jsonpatch==1.33
 jsonpointer==3.0.0
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
+keybert==0.8.5
 kiwisolver==1.4.7
 langchain==0.3.8
 langchain-community==0.3.8
@@ -53,6 +54,7 @@ multidict==6.1.0
 mypy-extensions==1.0.0
 narwhals==1.14.2
 networkx==3.4.2
+nltk==3.9.1
 numpy==1.26.4
 orjson==3.10.12
 packaging==24.2
@@ -84,6 +86,7 @@ safetensors==0.4.5
 scikit-learn==1.5.2
 scipy==1.14.1
 sentence-transformers==3.3.1
+sentencepiece==0.2.0
 six==1.16.0
 smmap==5.0.1
 sniffio==1.3.1
